@@ -1,3 +1,9 @@
+2024-04-13 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Small z80 codegen improvements, part of RFE #905.
+
 2024-04-12 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c:
